ingress/y-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/common-name: api.y.com
  name: y-api-ingress
spec:
  rules:
  - host: api.y.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: y-api-service
            port:
              number: 1323
  tls:
  - hosts: 
    - api.y.com
    secretName: y-api-ingress-cert
