ingress/y-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/common-name: y.com
  name: y-client-ingress
spec:
  rules:
  - host: y.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: y-client-service
            port:
              number: 3000
  tls:
  - hosts: 
    - y.com
    secretName: y-client-ingress-cert
