ingress/y-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/common-name: VU-Containerization Group 30
  name: y-ingress
spec:
  rules:
  - host: y.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: y-client-service
            port:
              number: 3000
  - host: api.y.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: y-api-service
            port:
              number: 1323
  tls:
  - hosts: 
    - y.com
    - api.y.com
    secretName: y-ingress-cert
